# libattpc

./: .gitmodules  CMakeLists.txt  README.md
cleaning/: .gitignore  CMakeLists.txt
cleaning/include/attpc/cleaning/: Cluster.h  HTripletClustering.h  HoughSpace.h  HoughSpiralCleaner.h  LinearHoughTransform.h  neighbors.h
cleaning/prof/: prof_LinearHoughTransform.cpp
cleaning/src/: CircularHoughTransform.cpp  Cluster.cpp  HTripletClustering.cpp  HoughSpiralCleaner.cpp  HoughTransform.cpp  metrics.cpp  utilities.cpp
cleaning/test/: catch_main.cpp  test_HTripletClustering.cpp  test_HoughSpiralCleaner.cpp  test_LinearHoughTransform.cpp  test_metrics.cpp  test_utilities.cpp
cleaning/test/data/: data190-spiral.pcd  data40.pcd  data44-spiral.pcd  data62.pcd  data99.pcd
common/: .gitignore
common/include/attpc/common/: ConfigStore.h  HDF5DataFile.h  Trace.h  types.h  utilities.h
common/src/: ConfigStore.cpp  FullTraceEvent.cpp  HardwareAddress.cpp  PadLookupTable.cpp
common/test/: test_ConfigStore.cpp  test_FullTraceEvent.cpp  test_HDF5DataFile.cpp  test_HardwareAddress.cpp  test_Trace.cpp  test_yaml_conversions.cpp
common/test/data/: test_config.yml  test_lookup.csv
doc/: Doxyfile  Doxyfile.in  cleaning.dox  hough_transform.dox  mainpage.dox
docs/: Doxyfile.in  common.dox  mergers.dox  merging_graws.dox
include/: CircularHoughTransform.h  Cluster.h  ConfigStore.h  FullTraceEvent.h  GRAWDataItem.h  GRAWFile.h  GRAWFormatSpec.h  GRAWFrame.h  GRAWHeader.h  GRAWHeaderField.h  HDF5DataFile.h  HTripletClustering.h  HardwareAddress.h  HoughSpace.h  HoughSpiralCleaner.h  HoughTransform.h  LinearHoughTransform.h  Merger.h  RawFrame.h  Trace.h  Triplet.cpp  Triplet.h  cluster.h  conversions.h  eigen_common.h  hc.h  metrics.h  mst.h  neighbors.h  types.h  utilities.h  yaml_conversions.h
include/attpc/cleaning/: CircularHoughTransform.h  HoughTransform.h  Triplet.h  metrics.h  utilities.h
include/attpc/common/: FullTraceEvent.h  HDF5DataFile.h  HardwareAddress.h  PadLookupTable.h  Trace.h  utilities.h
include/attpc/mergers/: FrameAccumulator.h  GRAWFile.h  GRAWFrame.h  GRAWHeader.h  GRAWHeaderField.h  GuardedThread.h  LRUCache.h  LRUQueue.h  MergeManager.h  Merger.h  RawFrame.h  ThreadsafeQueue.h  Worker.h  utilities.h
include/metrics/: ClusterMetric.h  CompleteLinkClusterMetric.h  SingleLinkClusterMetric.h  SpiralTripletMetric.h  TripletMetric.h
mergers/: README.md
mergers/include/attpc/mergers/: FrameAccumulator.h  GRAWDataItem.h  GRAWFile.h  GRAWFrame.h  GRAWHeader.h  GRAWHeaderField.h  GuardedThread.h  LRUQueue.h  MergeManager.h  Merger.h  RawFrame.h  ThreadsafeQueue.h  Worker.h  signal_handling.h  utilities.h
mergers/src/: FrameAccumulator.cpp  GRAWFile.cpp  GRAWFrame.cpp  MergeManager.cpp  Merger.cpp  signal_handling.cpp
mergers/test/: test_GRAWFile.cpp  test_GRAWHeaderField.cpp  test_LRUQueue.cpp  test_RawFrame.cpp
mergers/test/data/: partial_readout_frame.graw
prof/: prof_LinearHoughTransform.cpp
src/: CircularHoughTransform.cpp  Cluster.cpp  ConfigStore.cpp  FrameAccumulator.cpp  FullTraceEvent.cpp  GRAWFile.cpp  GRAWFrame.cpp  GRAWHeader.cpp  HDF5DataFile.cpp  HTripletClustering.cpp  HardwareAddress.cpp  HoughSpace.cpp  HoughSpiralCleaner.cpp  HoughTransform.cpp  LinearHoughTransform.cpp  MergeManager.cpp  Merger.cpp  PadLookupTable.cpp  Trace.cpp  cluster.cpp  conversions.cpp  hc.cpp  main.cpp  merge_main.cpp  metrics.cpp  mst.cpp  signal_handling.cpp  smoothenCloud.cpp  utilities.cpp
src/metrics/: CompleteLinkClusterMetric.cpp  SingleLinkClusterMetric.cpp  SpiralTripletMetric.cpp
test/: catch_main.cpp  test_CircularHoughTransform.cpp  test_ConfigStore.cpp  test_FrameAccumulator.cpp  test_FullTraceEvent.cpp  test_GRAWFile.cpp  test_GRAWHeaderField.cpp  test_HDF5DataFile.cpp  test_HTripletClustering.cpp  test_HardwareAddress.cpp  test_HoughSpace.cpp  test_HoughSpiralCleaner.cpp  test_LinearHoughTransform.cpp  test_PadLookupTable.cpp  test_RawFrame.cpp  test_Trace.cpp  test_metrics.cpp  test_neighbors.cpp  test_utilities.cpp  test_yaml_conversions.cpp
test/data/: data03-spiral.pcd  data13.pcd  data41.pcd  data49.pcd  test_config.yml
